--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.21.0",
-        "better-sqlite3": "^11.0.0",
         "express": "^4.18.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "uuid": "^9.0.0"
+    },
+    "optionalDependencies": {
+        "better-sqlite3": "^11.0.0"
     },
     "keywords": [
         "honeypot",
